修改部分样式及注释

--- a/blog_user/usercenter.html
+++ b/blog_user/usercenter.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="maincss/main.css">
     <link rel="stylesheet" href="maincss/userblock.css">
     <style>
-
     </style>
 </head>
 
@@ -18,14 +17,22 @@
     <!--导航栏开始-->
     <div class="navbar navbar-default">
         <div class="container">
+
+            <!--Logo开始-->
             <div class="navbar-header">
                 <a href="index.html" class="navbar-brand" id="mylogo">MANGYU</a>
             </div>
+            <!--Logo结束-->
+
+            <!--响应式菜单按钮开始-->
             <label id="toggle-label" class="visible-xs-inline-block" for="toggle-checkbox">
                 <span class="glyphicon glyphicon-menu-hamburger"></span>
             </label>
             <input class="hidden" id="toggle-checkbox" type="checkbox">
+            <!--响应式菜单按钮结束-->
+            <!--导航栏菜单开始-->
             <div class="hidden-xs">
+                <!--左菜单-->
                 <ul class="nav navbar-nav">
                     <li class="active">
                         <a href="index.html">首页</a>
@@ -39,28 +46,45 @@
                     <li>
                         <a href="#">最新</a>
                     </li>
+                    <!--下拉更多分类开始-->
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">更多 <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">更多
+                            <span class="caret"></span>
+                        </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">情感</a></li>
-                            <li><a href="#">技术</a></li>
-                            <li><a href="#">文学</a></li>
+                            <li>
+                                <a href="#">情感</a>
+                            </li>
+                            <li>
+                                <a href="#">技术</a>
+                            </li>
+                            <li>
+                                <a href="#">文学</a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">国外</a></li>
+                            <li>
+                                <a href="#">国外</a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">其他</a></li>
+                            <li>
+                                <a href="#">其他</a>
+                            </li>
                         </ul>
                     </li>
+                    <!--下拉更多分类结束-->
                 </ul>
+                <!--右菜单-->
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-li-user">
-                        <span class="glyphicon glyphicon-user"></span><a href="usercenter.html" class="">MANGYU</a>
+                        <span class="glyphicon glyphicon-user"></span>
+                        <a href="usercenter.html" class="">MANGYU</a>
                     </li>
                     <li>
                         <a href="login.html">登出</a>
                     </li>
                 </ul>
             </div>
+            <!--导航栏菜单结束-->
         </div>
     </div>
     <!--导航栏结束-->
@@ -68,10 +92,13 @@
     <!--页面内容开始-->
     <div class="container">
         <div class="row clearfix">
+            <!--左边内容开始-->
             <div class="col-md-4">
                 <div class="user-info">
                     <div class="user-avatar">
-                        <a href="usercenter.html"><img src="img/avatar.jpg" alt="头像"></a>  
+                        <a href="usercenter.html">
+                            <img src="img/avatar.jpg" alt="头像">
+                        </a>
                     </div>
                     <p class="user-name">MANGYU</p>
                     <p class="user-level">
@@ -133,9 +160,14 @@
                     </div>
                 </div>
             </div>
+            <!--左边内容结束-->
+
+            <!--右边内容开始-->
             <div class="col-md-8">
                 <div class="user-activity">
-                    <h4 class="user-title">发表博文<a href="#">更多</a></h4>
+                    <h4 class="user-title">发表博文
+                        <a href="#">更多</a>
+                    </h4>
                     <table class="table table-hover">
                         <thead>
                             <tr class="success">
@@ -146,27 +178,37 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><a href="post.html">人还是需要点精神的</a></td>
+                                <td>
+                                    <a href="post.html">人还是需要点精神的</a>
+                                </td>
                                 <td>文学</td>
                                 <td>2018-06-06</td>
                             </tr>
                             <tr>
-                                <td><a href="post.html">人还是需要点精神的</a></td>
+                                <td>
+                                    <a href="post.html">人还是需要点精神的</a>
+                                </td>
                                 <td>文学</td>
                                 <td>2018-06-06</td>
                             </tr>
                             <tr>
-                                <td><a href="post.html">人还是需要点精神的</a></td>
+                                <td>
+                                    <a href="post.html">人还是需要点精神的</a>
+                                </td>
                                 <td>文学</td>
                                 <td>2018-06-06</td>
                             </tr>
                             <tr>
-                                <td><a href="post.html">人还是需要点精神的</a></td>
+                                <td>
+                                    <a href="post.html">人还是需要点精神的</a>
+                                </td>
                                 <td>文学</td>
                                 <td>2018-06-06</td>
                             </tr>
                             <tr>
-                                <td><a href="post.html">人还是需要点精神的</a></td>
+                                <td>
+                                    <a href="post.html">人还是需要点精神的</a>
+                                </td>
                                 <td>文学</td>
                                 <td>2018-06-06</td>
                             </tr>
@@ -174,7 +216,9 @@
                     </table>
                 </div>
                 <div class="user-activity">
-                    <h4 class="user-title">我的随记<a href="#">更多</a></h4>  
+                    <h4 class="user-title">我的随记
+                        <a href="#">更多</a>
+                    </h4>
                     <div class="panel panel-success">
                         <div class="panel-heading">
                             <h3 class="panel-title">随记1标题</h3>
@@ -193,43 +237,57 @@
                     </div>
                 </div>
                 <div class="user-activity">
-                        <h4 class="user-title">我的热度<a href="#">更多</a></h4>
-                        <table class="table table-hover">
-                            <thead>
-                                <tr class="success">
-                                    <th>博文名</th>
-                                    <th>点击</th>
-                                    <th>回复</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td><a href="post.html">人还是需要点精神的</a></td>
-                                    <td>666</td>
-                                    <td>66</td>
-                                </tr>
-                                <tr>
-                                    <td><a href="post.html">人还是需要点精神的</a></td>
-                                    <td>666</td>
-                                    <td>66</td>
-                                </tr>
-                                <tr>
-                                    <td><a href="post.html">人还是需要点精神的</a></td>
-                                    <td>666</td>
-                                    <td>66</td>
-                                </tr>                               
-                            </tbody>
-                        </table>
-                    </div>
+                    <h4 class="user-title">我的热度
+                        <a href="#">更多</a>
+                    </h4>
+                    <table class="table table-hover">
+                        <thead>
+                            <tr class="success">
+                                <th>博文名</th>
+                                <th>点击</th>
+                                <th>回复</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <a href="post.html">人还是需要点精神的</a>
+                                </td>
+                                <td>666</td>
+                                <td>66</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="post.html">人还是需要点精神的</a>
+                                </td>
+                                <td>666</td>
+                                <td>66</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="post.html">人还是需要点精神的</a>
+                                </td>
+                                <td>666</td>
+                                <td>66</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
+            <!--右边内容结束-->
         </div>
     </div>
-    <div class="back-to-top"><span class="glyphicon glyphicon-chevron-up"></span><p>TOP</p></div>
+    <!--页面内容结束-->
+
+    <!--回到顶部按钮-->
+    <div class="back-to-top">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+        <p>TOP</p>
+    </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="mainjs/totop.js"></script>
     <script>
-
     </script>
 </body>
 
