--- a/blog_user/index.html
+++ b/blog_user/index.html
@@ -180,14 +180,22 @@
     <!--导航栏开始-->
     <div class="navbar navbar-default">
         <div class="container">
+
+            <!--Logo开始-->
             <div class="navbar-header">
                 <a href="index.html" class="navbar-brand" id="mylogo">MANGYU</a>
             </div>
+            <!--Logo结束-->
+
+            <!--响应式菜单按钮开始-->
             <label id="toggle-label" class="visible-xs-inline-block" for="toggle-checkbox">
                 <span class="glyphicon glyphicon-menu-hamburger"></span>
             </label>
             <input class="hidden" id="toggle-checkbox" type="checkbox">
+            <!--响应式菜单按钮结束-->
+            <!--导航栏菜单开始-->
             <div class="hidden-xs">
+                <!--左菜单-->
                 <ul class="nav navbar-nav">
                     <li class="active">
                         <a href="index.html">首页</a>
@@ -201,28 +209,45 @@
                     <li>
                         <a href="#">最新</a>
                     </li>
+                    <!--下拉更多分类开始-->
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">更多 <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">更多
+                            <span class="caret"></span>
+                        </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">情感</a></li>
-                            <li><a href="#">技术</a></li>
-                            <li><a href="#">文学</a></li>
+                            <li>
+                                <a href="#">情感</a>
+                            </li>
+                            <li>
+                                <a href="#">技术</a>
+                            </li>
+                            <li>
+                                <a href="#">文学</a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">国外</a></li>
+                            <li>
+                                <a href="#">国外</a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">其他</a></li>
+                            <li>
+                                <a href="#">其他</a>
+                            </li>
                         </ul>
                     </li>
+                    <!--下拉更多分类结束-->
                 </ul>
+                <!--右菜单-->
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-li-user">
-                        <span class="glyphicon glyphicon-user"></span><a href="login.html">登录</a>
+                        <span class="glyphicon glyphicon-user"></span>
+                        <a href="login.html" class="">登录</a>
                     </li>
                     <li>
                         <a href="login.html">登出</a>
                     </li>
                 </ul>
             </div>
+            <!--导航栏菜单结束-->
         </div>
     </div>
     <!--导航栏结束-->
@@ -366,10 +391,14 @@
 
             <!--主页右边内容开始-->
             <div class="col-md-4 column container-right">
+
+                <!--搜索框位置-->
                 <div class="search-bar mysearch">
                     <input type="search" class="form-control" placeholder="搜一下">
                     <button class="btn mysearch-btn">搜索</button>
                 </div>
+
+                <!--主页发表博文入口-->
                 <section class="block block-right-top">
                     <h3>有见识的人都在这里</h3>
                     <p>表达网民立场,，记录个人生活，聚集意见领袖，众多草根精英，以我们的观点影响社会的进程 。</p>
@@ -443,10 +472,17 @@
         </div>
     </div>
     <!--页面内容结束-->
-    <div class="back-to-top"><span class="glyphicon glyphicon-chevron-up"></span><p>TOP</p></div>
+
+    <!--回到顶部按钮-->
+    <div class="back-to-top">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+        <p>TOP</p>
+    </div>
+
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="mainjs/totop.js"></script>   <!--回到顶部-->
+    <script src="mainjs/totop.js"></script>
+    <!--回到顶部js文件-->
     <script>
         $(function () {
 
